--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
         body {
             font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
             text-align: center;
-            background: #f1f1f1;
+            background: #ffffff;
             color: #333;
         }
         
         h1 {
-            font-size: 10em;
+            font-size: 6em;
+            color: #EA1611;
+        }
+        p img {
         }
     </style>
 </head>
 
 <body>
     <h1>路路购</h1>
-    <p>coming soon</p>
+    <p><img src="https://i.loli.net/2019/06/04/5cf61d84ec81c82132.jpeg" alt="路路购" title="路路购" /></p>
 </body>
 
 </html>
